# PyChatGPT

./: .gitignore  LICENSE  README.md  config.example.json  config.json  main.py  pyproject.toml  requirements.txt  webapi.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Classes/: auth.json  auth.py  chat.py  spinner.py
src/: __init__.py  requirements.txt
src/pychatgpt/: Auth0.py  __init__.py  main.py  pyChatGPT.py  requirements.txt
src/pychatgpt/classes/: chat.py  exceptions.py  headers.py  openai.py  test.py
